--- a/index.html
+++ b/index.html
@@ -125,7 +125,47 @@
 			</h2>
 		</div>
 	</section>
-
-	<footer></footer>
+	<footer>
+		<div class="container">
+			<div id="visitor_information" class="block">
+				<h3>Visitor Information</h3>
+				<a href="#"><p>Directions</p></a>
+				<a href="#"><p>Opening Times</p></a>
+				<a href="#"><p>Ticket & Passes</p></a>
+				<a href="#"><p>Parking</p></a>
+				<a href="#"><p>VIP Experiences</p></a>
+				<a href="#"><p>Covid-19</p></a>
+			</div>
+			<div id="attraction details" class="block">
+				<h3>Attraction Details</h3>
+				<a href="#"><p>Rides</p></a>
+				<a href="#"><p>Events</p></a>
+				<a href="#"><p>Corporate Events</p></a>
+			</div>
+			<div id="our_company" class="block">
+				<h3>Our Company</h3>
+				<a href="#"><p>Help Centre</p></a>
+				<a href="#"><p>Contact Us</p></a>
+				<a href="#"><p>Press</p></a>
+				<a href="#"><p>Jobs</p></a>
+				<a href="#"><p>Blog</p></a>
+				<a href="#"><p>About Us</p></a>
+				<a href="#"><p>Security Information</p></a>
+			</div>
+			<div id="legal" class="block">
+				<h3>Legal</h3>
+				<a href="#"><p>Terms & Conditions</p></a>
+				<a href="#"><p>Cookies</p></a>
+				<a href="#"><p>Privacy Policy</p></a>
+			</div>
+			<div id="social_media" class="block">
+				<h3>Social Media</h3>
+				<a href="#"><img src="images/facebook.png" alt="Facebook Logo"></a>
+				<a href="#"><img src="images/instagram.png" alt="Instagram Logo"></a>
+				<a href="#"><img src="images/twitter.png" alt="Twitter Logo"></a>
+			</div>
+		</div>
+		<p id="copyright">Copyright 1999-2022 by Team Awesome. All Rights Reserved.</p>
+	</footer>
 </body>
 </html>
