--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 		</div>
 	</section>
 	<footer>
+		<!-- Container for all the cards -->
 		<div class="container">
+			<!-- First Cards named visitor_information -->
 			<div id="visitor_information" class="block">
 				<h3>Visitor Information</h3>
 				<a href="#"><p>Directions</p></a>
@@ -136,12 +138,14 @@
 				<a href="#"><p>VIP Experiences</p></a>
 				<a href="#"><p>Covid-19</p></a>
 			</div>
+			<!-- Second Card named Attraction details -->
 			<div id="attraction details" class="block">
 				<h3>Attraction Details</h3>
 				<a href="#"><p>Rides</p></a>
 				<a href="#"><p>Events</p></a>
 				<a href="#"><p>Corporate Events</p></a>
 			</div>
+			<!-- Third Card named Our COmpany -->
 			<div id="our_company" class="block">
 				<h3>Our Company</h3>
 				<a href="#"><p>Help Centre</p></a>
@@ -152,12 +156,14 @@
 				<a href="#"><p>About Us</p></a>
 				<a href="#"><p>Security Information</p></a>
 			</div>
+			<!-- Fourth Card named Ledal -->
 			<div id="legal" class="block">
 				<h3>Legal</h3>
 				<a href="#"><p>Terms & Conditions</p></a>
 				<a href="#"><p>Cookies</p></a>
 				<a href="#"><p>Privacy Policy</p></a>
 			</div>
+			<!-- Fifth Card named Social media -->
 			<div id="social_media" class="block">
 				<h3>Social Media</h3>
 				<a href="#"><img src="images/facebook.png" alt="Facebook Logo"></a>
